Enabled Tilting, working on https certificate for live server testing on mobile devices, issue with re creating event listeners

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ input[type="search"]::-webkit-search-results-decoration {
 }
 
 .panel {
+    outline: none;
     border-radius: 25px;
     /* height: 65%;
     width: 25vh; */
@@ -121,7 +122,7 @@ input[type="search"]::-webkit-search-results-decoration {
     left: 30%;
     transform: translate(-50%, -50%) perspective(1500px) scale(0.8) rotateY(25deg);
     transition: all 0.3s ease-in-out;
-    filter: blur(4px);
+    /* filter: blur(4px); */
 }
 
 .panel-right {
@@ -129,7 +130,7 @@ input[type="search"]::-webkit-search-results-decoration {
     left: 70%;
     transform: translate(-50%, -50%) perspective(1500px) scale(0.8) rotateY(-25deg);
     transition: all 0.3s ease-in-out;
-    filter: blur(4px);
+    /* filter: blur(4px); */
 }
 
 .panel > img {
@@ -138,6 +139,13 @@ input[type="search"]::-webkit-search-results-decoration {
     left: 50%;
     transform: translate(-50%, -50%);
     height: 110%;
+    outline: none;
+    user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #panel-shadow {
@@ -160,6 +168,13 @@ input[type="search"]::-webkit-search-results-decoration {
     background-position: center;
     background-size: cover;
     overflow: hidden;
+    outline: none;
+    user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 .panel_details {
